--- a/List/list.html
+++ b/List/list.html
@@ -6,11 +6,11 @@
 </head>
 <body>
     <div class="back">
-    <a href="file:///C:/Users/giorg/Desktop/SpaceTV/index.html">Back</a>
+    <a href="https://spacetvofficial.github.io/SpaceTV/">Back</a>
     </div>
     <h1>Animes</h1>
     <div class="anime">
-    <a href="SerieID01/ep1/BokuNo_MyHeroAccademia_S1.html">Boku No My Hero Academia</a>
+    <a href="SerieID01/episodeSerie01.html">Boku No My Hero Academia</a>
     </div>
     <br/>
     <br/>
