--- a/List/SerieID01/ep1/BokuNo_MyHeroAccademia_S1.html
+++ b/List/SerieID01/ep1/BokuNo_MyHeroAccademia_S1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="back">
-        <a href="https://spacetvofficial.github.io/SpaceTV/SerieID01/episodeSerie01.html">Back</a>
+        <a href="spacetvofficial.githyb.io/SpaceTV/List/SerieID01/episodeSerie01.html">Back</a>
     </div>
     <a href="https://mega.nz/file/MG5C0RKR#5gGEINCDShWw7WwAIeVM9LZoS3I8ScDb4uQ059dKX7s">Download</a>
     <br/>
